--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".CountdownScreen"
-            android:exported="true"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".Screen" />
         <activity
-            android:name=".OptionsOfType"
-            android:exported="true" />
+            android:name=".OptionsOfType" />
         <activity
             android:name=".ChooseType"
             android:configChanges="orientation"
