--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 27 21:58:17 BRT 2019
-ndk.dir=/home/bfs/Android/Sdk/ndk-bundle
-sdk.dir=/home/bfs/Android/Sdk
+#Fri Feb 01 23:38:24 BRT 2019
+sdk.dir=C\:\\Users\\Bernardo\\AppData\\Local\\Android\\Sdk
